--- a/desserts.html
+++ b/desserts.html
@@ -2,6 +2,22 @@
 <html lang="en">
 <head>
 <body>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="desserts.html">Dessert Options</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse" id="navbar">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="basic.html">Basic</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="advanced.html">Advanced</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,12 +67,12 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container mt-4">
           <img src="Apricot.jpg" height="100" width="100" class="img-fluid" alt="Seasoning Desert">
           <img src="irish cake.jpg" height="100" width="100" class="img-fluid" alt="Delightful cake">
           <img src="strawberry.jpg" height="100" width="100" class="img-fluid" alt="Berry Berry strawberry">
         </div>
-        <div class="container">
+        <div class="container mt-4">
           <img src="Apricot.jpg" height="150" width="150" class="img-thumbnail" alt="Seasoning Desert">
           <img src="irish cake.jpg" height="150" width="150" class="img-thumbnail" alt="Delightful cake">
           <img src="strawberry.jpg" height="150" width="150" class="img-thumbnail" alt="Berry Berry strawberry">
@@ -133,6 +149,16 @@
           <button type="button" class="btn btn-danger">E</button>
         </div>      
     </div>
+  </div>
+  
+  <div class="dropdown mt-2"></div>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        Menu Links
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li><a class="dropdown-item" href="basic.html">Basic Page</a></li>
+        <li><a class="dropdown-item" href="advanced.html">Advanced Page</a></li>
+    </ul>
   </div>
     
   
